--- a/Exercice3_mon-CV.html
+++ b/Exercice3_mon-CV.html
@@ -20,7 +20,7 @@
             <section>
                 <h2>Contact</h2>
                 <p>
-                    <a href="tel:+14387227044">+1 438 722 7044</a><br>
+                    <a href="">Phone Number: Available upon request</a><br>
                     <a href="mailto:philipmai329@gmail.com">philipmai329@gmail.com</a><br>
                     Montréal, Québec<br>
                     <a href="https://github.com/PhilipMai329" target="_blank">GitHub</a><br>
